Right aligned dates and updated quote.

--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,7 @@ hr{
 }
 .right{
     text-align: right;
-    display: inline-flexbox;
-    margin-left: 1277px;
+    display: block;
     font-weight: normal;
 }
 .ContactLinks{
